# bootwatch

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
src/: main.rs  tui.rs
src/platform/: helper.rs  macos.rs  mod.rs  windows.rs
src/utils/: shard.rs
