[package]
name = "bootwatch"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A cross-platform TUI tool for managing boot/startup items on macOS and Windows"
repository = "https://github.com/cc-hearts/bootwatch"
readme = "README.md"

[dependencies]
crossterm = "0.27"
ratatui = "0.27"
shellexpand = "3.1.1"

[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
encoding_rs = "0.8.35"
